force-app/src/objects/ffvat__VatReportSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting related to VAT Report Generation</description>
    <fields>
        <fullName>ffvat__ECSalesListReportName__c</fullName>
        <defaultValue>&quot;ECSalesListReportSummer19&quot;</defaultValue>
        <description>Unique Name of &apos;EC Sales List Report&apos;</description>
        <label>EC Sales List Report Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__VATBreakdownReportName__c</fullName>
        <defaultValue>&quot;VATReturnBreakdownReportSummer19&quot;</defaultValue>
        <description>Unique Name of &apos;VAT Breakdown Report&apos;</description>
        <label>VAT Breakdown Report Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__VATReportEmailTemplate__c</fullName>
        <defaultValue>&quot;VATReportCompletedConfirmation&quot;</defaultValue>
        <description>&quot;Template Unique Name&quot; of VisualForce Email template used to send VAT Report completion email.</description>
        <label>VAT Report Email Template</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VAT Report Settings</label>
</CustomObject>